up to error for Cannot read property '_id' of null
under utilities/db line 38.

-cause is probably same as Cannot read property 'toString' of undefined

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "kinstech2",
+  "name": "kinstech",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next",
     "build": "next build",
     "start": "next start",
     "heroku-postbuild": "npm run build",
@@ -10,13 +10,27 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@paypal/react-paypal-js": "^7.5.1",
+    "@react-google-maps/api": "^2.7.0",
     "axios": "^0.25.0",
+    "bcryptjs": "^2.4.3",
+    "chart.js": "^3.7.0",
+    "cloudinary": "^1.28.1",
     "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.6",
+    "multer": "^1.4.4",
     "next": "12.0.8",
     "next-connect": "^0.11.0",
+    "notistack": "^1.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-chartjs-2": "^4.0.1",
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.24.2",
+    "react-material-ui-carousel": "^3.1.1",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "eslint": "8.6.0",
