--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.6",
     "multer": "^1.4.4",
-    "next": "12.0.8",
+    "next": "^12.0.9",
     "next-connect": "^0.11.0",
     "notistack": "^1.0.10",
     "react": "17.0.2",
@@ -30,7 +30,8 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.24.2",
     "react-material-ui-carousel": "^3.1.1",
-    "streamifier": "^0.1.1"
+    "streamifier": "^0.1.1",
+    "vercel": "^23.1.2"
   },
   "devDependencies": {
     "eslint": "8.6.0",
