--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.24.2",
     "react-material-ui-carousel": "^3.1.1",
+    "react-stripe-checkout": "^2.6.3",
     "streamifier": "^0.1.1",
     "vercel": "^23.1.2"
   },
